# s3-rs

./: .justfile  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yaml  ci.yml
benches/: bench.rs
examples/: README.md  async_auth_imds.rs  async_auth_web_identity.rs  async_copy_object.rs  async_delete_objects_batch.rs  async_list_buckets.rs  async_list_objects.rs  async_multipart_upload.rs  async_presign_build_async.rs  async_put_get_delete.rs  async_put_stream.rs  async_tls_root_store.rs  blocking_list_buckets.rs  blocking_presign_get.rs  blocking_put_get_delete.rs  blocking_tls_root_store.rs  minio_local_put_get_delete.rs  presign_get.rs  r2_put_get_delete.rs
src/: auth.rs  error.rs  lib.rs  providers.rs
src/api/: blocking_buckets.rs  blocking_common.rs  blocking_objects.rs  buckets.rs  mod.rs  objects.rs
src/auth/: cache.rs  mod.rs  model.rs  provider.rs  tests.rs
src/client/: async_client.rs  blocking_client.rs  common.rs  mod.rs
src/credentials/: imds.rs  mod.rs  profile.rs  sts.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs  tls.rs
src/types/: mod.rs  xml.rs
src/util/: encode.rs  headers.rs  md5.rs  mod.rs  redact.rs  signing.rs  text.rs  url.rs  xml.rs
tests/: minio_async.rs  minio_blocking.rs  s3_compat_async.rs  s3_compat_blocking.rs
tests/common/: mod.rs
