[package]
name = "s3"
version = "0.1.9"
description = "A lean, modern, unofficial S3-compatible client for Rust."
readme = "README.md"
repository = "https://github.com/lvillis/s3-rs"
homepage = "https://github.com/lvillis/s3-rs"
documentation = "https://docs.rs/s3"
keywords = ["s3", "object-storage", "aws", "minio", "sigv4"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2024"
rust-version = "1.93"
license = "MIT"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "src/**",
  "benches/**",
  "examples/**",
  "tests/**"
]

[workspace]
members = ["."]
resolver = "3"

[workspace.dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
crc = { version = "3.4.0", default-features = false }
criterion = { version = "0.8.2" }
futures-core = { version = "0.3.31", default-features = false, features = ["std"] }
futures-io = { version = "0.3.31", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "io"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
hmac = { version = "0.12.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
http-body-util = { version = "0.1.3", default-features = false }
md-5 = { version = "0.10.6", default-features = false, features = ["std"] }
metrics = { version = "0.24.3", default-features = false }
quick-xml = { version = "0.39.0", default-features = false, features = ["serialize"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream"] }
reqx = { version = "0.1.11", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
sha1 = { version = "0.10.6", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
time = { version = "0.3.47", default-features = false, features = ["std", "parsing"] }
tokio = { version = "1.49.0", default-features = false, features = ["time", "sync"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
ureq = { version = "3.2.0", default-features = false }
url = { version = "2.5.8", default-features = false, features = ["std"] }

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
crc = { workspace = true, optional = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true, optional = true }
md-5 = { workspace = true }
reqx = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true }
time = { workspace = true }
url = { workspace = true }

# Optional dependencies (features)
futures-core = { workspace = true, optional = true }
futures-io = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread", "time"] }
ureq = { workspace = true }

[features]
default = ["async", "rustls"]

# Core modes
async = [
    "dep:reqx",
    "dep:futures-core",
    "dep:futures-io",
    "dep:futures-util",
    "dep:tokio",
    "dep:http-body-util",
]
blocking = ["dep:reqx"]

# Observability
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

# Optional capabilities
checksums = ["dep:crc", "dep:sha1"]
multipart = []
providers = []
credentials-profile = []
credentials-imds = ["dep:serde_json"]
credentials-sts = []

# TLS selection
rustls = [
    "reqx?/async-tls-rustls-ring",
    "reqx?/blocking-tls-rustls-ring",
]
native-tls = ["reqx?/async-tls-native", "reqx?/blocking-tls-native"]

# Optional escape hatch
allow-both-tls = []
unstable-raw = []

[[bench]]
name = "bench"
harness = false

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
